--- a/client/index.html
+++ b/client/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="app/app.css">
       <!-- injector:css -->
       <link rel="stylesheet" href="app/app.css">
+      <link rel="stylesheet" href="app/client/bower_components/angular/angular-csp.css">
       <!-- endinjector -->
     <!-- endbuild -->
   </head>
@@ -26,7 +27,26 @@
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/home">RadioBase</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
     <!-- Add your site or application content here -->
     <div ui-view=""></div>
 
@@ -56,6 +76,7 @@
       <script src="bower_components/lodash/dist/lodash.compat.js"></script>
       <script src="bower_components/angular-socket-io/socket.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+      <script src="bower_components/angular-route/angular-route.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
@@ -63,6 +84,14 @@
         <!-- build:js({.tmp,client}) app/app.js -->
         <script src="app/app.js"></script>
           <!-- injector:js -->
+          <script src="app/youtube/youtube.controller.js"></script>
+          <script src="app/youtube/youtube.js"></script>
+          <script src="app/radiostations/koop//stronger-than-dirt/stronger-than-dirt.controller.js"></script>
+          <script src="app/radiostations/koop/stronger-than-dirt/stronger-than-dirt.js"></script>
+
+          <script src="app/radiostations/koop/koop.js"></script>
+          <script src="app/radiostations/koop/koop.controller.js"></script>
+
           <script src="app/greetings/greetings.controller.js"></script>
           <script src="app/greetings/greetings.js"></script>
           <script src="app/home/home.controller.js"></script>
