trying to figure out the youtube api call in the scraper.

--- a/client/app/youtube/youtube.html
+++ b/client/app/youtube/youtube.html
@@ -5,9 +5,8 @@
   &nbsp;
 </div>
 <div ng-repeat="song in songs" class="col-md-4 video-box text-center">
-	{{getYoutube(song.title, song.artist)}}
 	<div class="embed-responsive embed-responsive-4by3">
-  		<iframe class="embed-responsive-item" src="//www.youtube.com/embed/"+{{$scope.youtubeId}}></iframe>
+  		<iframe class="embed-responsive-item" src="//www.youtube.com/embed/"+{{$song.youtubeId}}></iframe>
 	</div>
 	
 <!-- 	<iframe width="400" height="250" src="//www.youtube.com/embed/aE_CVWMWK74" frameborder="0" allowfullscreen></iframe>
