about to mess with spotify.

--- a/client/index.html
+++ b/client/index.html
@@ -37,6 +37,8 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="/home">RadioBase</a>
+          <a href="/login" class="btn btn-primary">Log in with Spotify</a>
+
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
