added pictures to koop page. need to work on the last page where it only shows the song clicked

--- a/client/app/radiostations/koop/koop.html
+++ b/client/app/radiostations/koop/koop.html
@@ -18,7 +18,7 @@
 		
 			<div class="thumbnail">
           <br/>
-			    <img src={{show.programInformation.programImage}} height:150px width: 150px alt="Radio Show's logo">
+			    <img class="thumb-image" src={{show.programInformation.programThumbnail}} alt="Radio Show's logo">
 			    <div class="caption">
 			      <h4 class='thumbnail-show-title'>{{show.programInformation.programName}}</h4>
 			      <p class="about">{{show.programInformation.about}}</p>
