--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]><!--> <html ng-app="radiobase10App" class="no-js"> <!--<![endif]-->
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -23,10 +23,12 @@
       <!-- endinjector -->
     <!-- endbuild -->
   </head>
-  <body ng-app="radiobase10App">
+  <body ng-controller='mainCtrl'>
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
+
+    <!--make a controller -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
@@ -37,7 +39,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="/home">RadioBase</a>
-          <a href="/login" class="btn btn-primary">Log in with Spotify</a>
+          <a ng-click='getSpotify()' class="btn btn-primary spotify-button">Log in with Spotify</a>
 
         </div>
         <div id="navbar" class="collapse navbar-collapse">
