--- a/client/app/youtube/youtube.html
+++ b/client/app/youtube/youtube.html
@@ -8,7 +8,7 @@
 <div id="sidebar-songs" class="btn-group-vertical" role="group">
 	<div>
 		<div ng-repeat="song in songs | filter:filterYoutube" >
-		 <button type="button" class="btn btn-link">
+		 <button ng-click="setYoutubeId(song.youtubeId)" type="button" class="btn btn-link">
 		 	<div style="text-align:left">
 			 	<span style="color:black">Title:</span> {{song.title}}<br>
 			 	<span style="color:black"> Artist: </span> {{song.artist}} </button>
@@ -16,4 +16,7 @@
 		</div>
 	</div>
 </div>
-<aside id="boxy-content" class='boxy'></aside>
+<div id="boxy-content" class="embed-responsive embed-responsive-16by9">
+  		<iframe class="embed-responsive-item" ng-src="{{setUrl(youtubeId)}}"></iframe>
+  		
+</div>
