--- a/client/app/radiostations/koop/koop.html
+++ b/client/app/radiostations/koop/koop.html
@@ -22,9 +22,9 @@
 			    <div class="caption">
 			      <h4 class='thumbnail-show-title'>{{show.programInformation.programName}}</h4>
 			      <p class="about">{{show.programInformation.about}}</p>
-			      <p><a href="/radiostations/koop/shows/{{convertUrl(show.programInformation.programName)}}" class="btn btn-primary" role="button">Playlists</a>
-			      	<a href="#" class="btn btn-primary" role="button">Random Playlist</a></p>
-			    </div>
+			      <p><a href="/radiostations/koop/shows/{{convertUrl(show.programInformation.programName)}}" class="btn btn-primary text-center" role="button">Playlists</a>
+<!-- 			      	<a href="#" class="btn btn-primary" role="button">Random Playlist</a></p>
+ -->			    </div>
 			</div>
 		</div>
 	</div>
