--- a/client/index.html
+++ b/client/index.html
@@ -38,13 +38,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/home">RadioBase</a>
-          <a ng-click='getSpotify()' class="btn btn-primary spotify-button">Log in with Spotify</a>
-
+          <a class="navbar-brand active" href="/home">RadioBase</a>
+<!--           <a ng-click='getSpotify()' class="btn btn-primary spotify-button">Log in with Spotify</a>
+ -->
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li class=""><a href="#">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
